BS-Thesis/Code-Project/Yacc - mini Cpp _ REPLACED WITH Intermediate Parser/Phase2/y.output
   0  $accept : Program $end

   1  Program : DeclarationList

   2  DeclarationList : Declaration DeclarationList
   3                  |

   4  Declaration : FunctionDeclaration
   5              | ClassDeclaration

   6  $$1 :

   7  ClassDeclaration : S_CLASS ID OptionalSuperclass '{' $$1 MemberDeclarations '}' VariableList ';'

   8  VariableList : Variable MoreVariables
   9               |

  10  OptionalSuperclass : ':' S_PUBLIC ID
  11                     |

  12  MemberDeclarations : FieldDeclarationList S_PUBLIC ':' MethodDeclarationList
  13                     |

  14  FieldDeclarationList : FieldDeclaration FieldDeclarationList
  15                       |

  16  FieldDeclaration : OptionalStatic VariableDeclaration

  17  OptionalStatic : S_STATIC
  18                 |

  19  MethodDeclarationList : MethodDeclaration MethodDeclarationList
  20                        |

  21  MethodDeclaration : OptionalStatic FunctionDeclaration

  22  $$2 :

  23  FunctionDeclaration : FunctionType $$2 ID '(' OptionalParameterList ')' Block

  24  FunctionType : S_VOID
  25               | TypeName

  26  OptionalParameterList : Parameter MoreParameters
  27                        |

  28  Parameter : TypeName Variable

  29  MoreParameters : ',' Parameter MoreParameters
  30                 |

  31  Block : '{' DeclarationOrStatementList '}'

  32  $$3 :

  33  $$4 :

  34  DeclarationOrStatementList : $$3 DeclarationOrStatement $$4 DeclarationOrStatementList
  35                             |

  36  TypeName : PrimitiveType
  37           | ID

  38  PrimitiveType : S_INT
  39                | S_BOOL
  40                | S_FLOAT

  41  TypeModifier : OptionalPrimaryModifier OptionalSecondaryModifier

  42  OptionalPrimaryModifier : S_CONST
  43                          |

  44  OptionalSecondaryModifier : S_UNSIGNED
  45                            | S_SIGNED
  46                            |

  47  PrimitiveDeclaration : TypeModifier PrimitiveType RestOfVariableDeclaration

  48  $$5 :

  49  VariableDeclaration : TypeModifier $$5 TypeName RestOfVariableDeclaration

  50  RestOfVariableDeclaration : Variable MoreVariables ';'

  51  OptionalPointer : '*' OptionalPointer
  52                  |

  53  Dimensions : '[' NUM ']' Dimensions
  54             |

  55  VariableInitilization : '=' Expression
  56                        |

  57  Variable : OptionalPointer ID Dimensions VariableInitilization

  58  MoreVariables : ',' Variable MoreVariables
  59                |

  60  Expression : Disjunction

  61  MoreExpressions : ',' Expression MoreExpressions
  62                  |

  63  OptionalExpression : Expression
  64                     |

  65  Disjunction : Conjunction MoreConjunctions

  66  MoreConjunctions : S_OR Conjunction MoreConjunctions
  67                   |

  68  Conjunction : Equality MoreEqualities

  69  MoreEqualities : S_AND Equality MoreEqualities
  70                 |

  71  Equality : Inequality RestOfEquality

  72  RestOfEquality : S_EQUALITY Inequality
  73                 | S_INEQUALITY Inequality
  74                 |

  75  Inequality : Sum RestOfInequality

  76  RestOfInequality : '<' Sum
  77                   | '>' Sum
  78                   | S_LESS_EQUAL Sum
  79                   | S_GREATER_EQUAL Sum
  80                   |

  81  Sum : Product MoreProducts

  82  $$6 :

  83  MoreProducts : '+' $$6 Product MoreProducts

  84  $$7 :

  85  MoreProducts : '-' $$7 Product MoreProducts
  86               |

  87  Product : Factor MoreFactors

  88  MoreFactors : '*' Factor MoreFactors
  89              | '/' Factor MoreFactors
  90              | '%' Factor MoreFactors
  91              |

  92  Factor : Primary

  93  $$8 :

  94  Factor : '+' $$8 Primary

  95  $$9 :

  96  Factor : '-' $$9 Primary
  97         | '!' Primary

  98  Primary : ID MorePrimary
  99          | NUM
 100          | S_TRUE
 101          | S_FALSE
 102          | '(' Expression ')'

 103  MorePrimary : ArrayAccess
 104              | FieldAccess
 105              | FunctionCall
 106              |

 107  ArrayAccess : '[' Expression ']' MorePrimary

 108  FieldAccess : '.' ID MorePrimary

 109  FunctionCall : '(' OptionalArgumentList ')' MorePrimary

 110  OptionalArgumentList : Expression MoreExpressions
 111                       |

 112  DeclarationOrStatement : PrimitiveDeclaration
 113                         | KeywordStatement
 114                         | OtherDeclarationOrStatement

 115  Statement : KeywordStatement
 116            | ExpressionStatement

 117  ExpressionStatement : ID RestOfExpressionStatement

 118  KeywordStatement : Selection
 119                   | Iteration
 120                   | Jump
 121                   | Block

 122  $$10 :

 123  Selection : S_IF $$10 '(' Expression ')' Statement OptionalElse

 124  $$11 :

 125  OptionalElse : S_ELSE $$11 Statement
 126               |

 127  Iteration : S_WHILE '(' Expression ')' Statement
 128            | S_DO Statement S_WHILE '(' Expression ')' ';'

 129  Jump : S_RETURN OptionalExpression ';'

 130  OtherDeclarationOrStatement : ID RestOfDeclarationOrStatement

 131  RestOfDeclarationOrStatement : RestOfExpressionStatement

 132  RestOfExpressionStatement : MorePrimary OptionalAssignment ';'

 133  OptionalAssignment : '=' Expression
 134                     |

state 0
	$accept : . Program $end  (0)
	DeclarationList : .  (3)

	ID  shift 1
	S_VOID  shift 2
	S_BOOL  shift 3
	S_INT  shift 4
	S_FLOAT  shift 5
	S_CLASS  shift 6
	$end  reduce 3

	Program  goto 7
	DeclarationList  goto 8
	Declaration  goto 9
	FunctionDeclaration  goto 10
	ClassDeclaration  goto 11
	FunctionType  goto 12
	TypeName  goto 13
	PrimitiveType  goto 14


state 1
	TypeName : ID .  (37)

	.  reduce 37


state 2
	FunctionType : S_VOID .  (24)

	.  reduce 24


state 3
	PrimitiveType : S_BOOL .  (39)

	.  reduce 39


state 4
	PrimitiveType : S_INT .  (38)

	.  reduce 38


state 5
	PrimitiveType : S_FLOAT .  (40)

	.  reduce 40


state 6
	ClassDeclaration : S_CLASS . ID OptionalSuperclass '{' $$1 MemberDeclarations '}' VariableList ';'  (7)

	ID  shift 15
	.  error


state 7
	$accept : Program . $end  (0)

	$end  accept


state 8
	Program : DeclarationList .  (1)

	.  reduce 1


state 9
	DeclarationList : Declaration . DeclarationList  (2)
	DeclarationList : .  (3)

	ID  shift 1
	S_VOID  shift 2
	S_BOOL  shift 3
	S_INT  shift 4
	S_FLOAT  shift 5
	S_CLASS  shift 6
	$end  reduce 3

	DeclarationList  goto 16
	Declaration  goto 9
	FunctionDeclaration  goto 10
	ClassDeclaration  goto 11
	FunctionType  goto 12
	TypeName  goto 13
	PrimitiveType  goto 14


state 10
	Declaration : FunctionDeclaration .  (4)

	.  reduce 4


state 11
	Declaration : ClassDeclaration .  (5)

	.  reduce 5


state 12
	FunctionDeclaration : FunctionType . $$2 ID '(' OptionalParameterList ')' Block  (23)
	$$2 : .  (22)

	.  reduce 22

	$$2  goto 17


state 13
	FunctionType : TypeName .  (25)

	.  reduce 25


state 14
	TypeName : PrimitiveType .  (36)

	.  reduce 36


state 15
	ClassDeclaration : S_CLASS ID . OptionalSuperclass '{' $$1 MemberDeclarations '}' VariableList ';'  (7)
	OptionalSuperclass : .  (11)

	':'  shift 18
	'{'  reduce 11

	OptionalSuperclass  goto 19


state 16
	DeclarationList : Declaration DeclarationList .  (2)

	.  reduce 2


state 17
	FunctionDeclaration : FunctionType $$2 . ID '(' OptionalParameterList ')' Block  (23)

	ID  shift 20
	.  error


state 18
	OptionalSuperclass : ':' . S_PUBLIC ID  (10)

	S_PUBLIC  shift 21
	.  error


state 19
	ClassDeclaration : S_CLASS ID OptionalSuperclass . '{' $$1 MemberDeclarations '}' VariableList ';'  (7)

	'{'  shift 22
	.  error


state 20
	FunctionDeclaration : FunctionType $$2 ID . '(' OptionalParameterList ')' Block  (23)

	'('  shift 23
	.  error


state 21
	OptionalSuperclass : ':' S_PUBLIC . ID  (10)

	ID  shift 24
	.  error


state 22
	ClassDeclaration : S_CLASS ID OptionalSuperclass '{' . $$1 MemberDeclarations '}' VariableList ';'  (7)
	$$1 : .  (6)

	.  reduce 6

	$$1  goto 25


state 23
	FunctionDeclaration : FunctionType $$2 ID '(' . OptionalParameterList ')' Block  (23)
	OptionalParameterList : .  (27)

	ID  shift 1
	S_BOOL  shift 3
	S_INT  shift 4
	S_FLOAT  shift 5
	')'  reduce 27

	OptionalParameterList  goto 26
	TypeName  goto 27
	Parameter  goto 28
	PrimitiveType  goto 14


state 24
	OptionalSuperclass : ':' S_PUBLIC ID .  (10)

	.  reduce 10


state 25
	ClassDeclaration : S_CLASS ID OptionalSuperclass '{' $$1 . MemberDeclarations '}' VariableList ';'  (7)
	MemberDeclarations : .  (13)
	FieldDeclarationList : .  (15)
	OptionalStatic : .  (18)

	S_STATIC  shift 29
	ID  reduce 18
	S_BOOL  reduce 18
	S_INT  reduce 18
	S_FLOAT  reduce 18
	S_PUBLIC  reduce 15
	S_SIGNED  reduce 18
	S_UNSIGNED  reduce 18
	S_CONST  reduce 18
	'}'  reduce 13

	MemberDeclarations  goto 30
	FieldDeclarationList  goto 31
	FieldDeclaration  goto 32
	OptionalStatic  goto 33


state 26
	FunctionDeclaration : FunctionType $$2 ID '(' OptionalParameterList . ')' Block  (23)

	')'  shift 34
	.  error


state 27
	Parameter : TypeName . Variable  (28)
	OptionalPointer : .  (52)

	'*'  shift 35
	ID  reduce 52

	Variable  goto 36
	OptionalPointer  goto 37


state 28
	OptionalParameterList : Parameter . MoreParameters  (26)
	MoreParameters : .  (30)

	','  shift 38
	')'  reduce 30

	MoreParameters  goto 39


state 29
	OptionalStatic : S_STATIC .  (17)

	.  reduce 17


state 30
	ClassDeclaration : S_CLASS ID OptionalSuperclass '{' $$1 MemberDeclarations . '}' VariableList ';'  (7)

	'}'  shift 40
	.  error


state 31
	MemberDeclarations : FieldDeclarationList . S_PUBLIC ':' MethodDeclarationList  (12)

	S_PUBLIC  shift 41
	.  error


state 32
	FieldDeclarationList : FieldDeclaration . FieldDeclarationList  (14)
	FieldDeclarationList : .  (15)
	OptionalStatic : .  (18)

	S_STATIC  shift 29
	ID  reduce 18
	S_BOOL  reduce 18
	S_INT  reduce 18
	S_FLOAT  reduce 18
	S_PUBLIC  reduce 15
	S_SIGNED  reduce 18
	S_UNSIGNED  reduce 18
	S_CONST  reduce 18

	FieldDeclarationList  goto 42
	FieldDeclaration  goto 32
	OptionalStatic  goto 33


state 33
	FieldDeclaration : OptionalStatic . VariableDeclaration  (16)
	OptionalPrimaryModifier : .  (43)

	S_CONST  shift 43
	ID  reduce 43
	S_BOOL  reduce 43
	S_INT  reduce 43
	S_FLOAT  reduce 43
	S_SIGNED  reduce 43
	S_UNSIGNED  reduce 43

	VariableDeclaration  goto 44
	TypeModifier  goto 45
	OptionalPrimaryModifier  goto 46


state 34
	FunctionDeclaration : FunctionType $$2 ID '(' OptionalParameterList ')' . Block  (23)

	'{'  shift 47
	.  error

	Block  goto 48


state 35
	OptionalPointer : '*' . OptionalPointer  (51)
	OptionalPointer : .  (52)

	'*'  shift 35
	ID  reduce 52

	OptionalPointer  goto 49


state 36
	Parameter : TypeName Variable .  (28)

	.  reduce 28


state 37
	Variable : OptionalPointer . ID Dimensions VariableInitilization  (57)

	ID  shift 50
	.  error


state 38
	MoreParameters : ',' . Parameter MoreParameters  (29)

	ID  shift 1
	S_BOOL  shift 3
	S_INT  shift 4
	S_FLOAT  shift 5
	.  error

	TypeName  goto 27
	Parameter  goto 51
	PrimitiveType  goto 14


state 39
	OptionalParameterList : Parameter MoreParameters .  (26)

	.  reduce 26


state 40
	ClassDeclaration : S_CLASS ID OptionalSuperclass '{' $$1 MemberDeclarations '}' . VariableList ';'  (7)
	VariableList : .  (9)
	OptionalPointer : .  (52)

	'*'  shift 35
	ID  reduce 52
	';'  reduce 9

	VariableList  goto 52
	Variable  goto 53
	OptionalPointer  goto 37


state 41
	MemberDeclarations : FieldDeclarationList S_PUBLIC . ':' MethodDeclarationList  (12)

	':'  shift 54
	.  error


state 42
	FieldDeclarationList : FieldDeclaration FieldDeclarationList .  (14)

	.  reduce 14


state 43
	OptionalPrimaryModifier : S_CONST .  (42)

	.  reduce 42


state 44
	FieldDeclaration : OptionalStatic VariableDeclaration .  (16)

	.  reduce 16


state 45
	VariableDeclaration : TypeModifier . $$5 TypeName RestOfVariableDeclaration  (49)
	$$5 : .  (48)

	.  reduce 48

	$$5  goto 55


state 46
	TypeModifier : OptionalPrimaryModifier . OptionalSecondaryModifier  (41)
	OptionalSecondaryModifier : .  (46)

	S_SIGNED  shift 56
	S_UNSIGNED  shift 57
	ID  reduce 46
	S_BOOL  reduce 46
	S_INT  reduce 46
	S_FLOAT  reduce 46

	OptionalSecondaryModifier  goto 58


state 47
	Block : '{' . DeclarationOrStatementList '}'  (31)
	$$3 : .  (32)
	DeclarationOrStatementList : .  (35)

	ID  reduce 32
	S_BOOL  reduce 32
	S_INT  reduce 32
	S_FLOAT  reduce 32
	S_RETURN  reduce 32
	S_SIGNED  reduce 32
	S_UNSIGNED  reduce 32
	S_CONST  reduce 32
	S_IF  reduce 32
	S_WHILE  reduce 32
	S_DO  reduce 32
	'{'  reduce 32
	'}'  reduce 35

	DeclarationOrStatementList  goto 59
	$$3  goto 60


state 48
	FunctionDeclaration : FunctionType $$2 ID '(' OptionalParameterList ')' Block .  (23)

	.  reduce 23


state 49
	OptionalPointer : '*' OptionalPointer .  (51)

	.  reduce 51


state 50
	Variable : OptionalPointer ID . Dimensions VariableInitilization  (57)
	Dimensions : .  (54)

	'['  shift 61
	';'  reduce 54
	')'  reduce 54
	','  reduce 54
	'='  reduce 54

	Dimensions  goto 62


state 51
	MoreParameters : ',' Parameter . MoreParameters  (29)
	MoreParameters : .  (30)

	','  shift 38
	')'  reduce 30

	MoreParameters  goto 63


state 52
	ClassDeclaration : S_CLASS ID OptionalSuperclass '{' $$1 MemberDeclarations '}' VariableList . ';'  (7)

	';'  shift 64
	.  error


state 53
	VariableList : Variable . MoreVariables  (8)
	MoreVariables : .  (59)

	','  shift 65
	';'  reduce 59

	MoreVariables  goto 66


state 54
	MemberDeclarations : FieldDeclarationList S_PUBLIC ':' . MethodDeclarationList  (12)
	OptionalStatic : .  (18)
	MethodDeclarationList : .  (20)

	S_STATIC  shift 29
	ID  reduce 18
	S_VOID  reduce 18
	S_BOOL  reduce 18
	S_INT  reduce 18
	S_FLOAT  reduce 18
	'}'  reduce 20

	MethodDeclarationList  goto 67
	OptionalStatic  goto 68
	MethodDeclaration  goto 69


state 55
	VariableDeclaration : TypeModifier $$5 . TypeName RestOfVariableDeclaration  (49)

	ID  shift 1
	S_BOOL  shift 3
	S_INT  shift 4
	S_FLOAT  shift 5
	.  error

	TypeName  goto 70
	PrimitiveType  goto 14


state 56
	OptionalSecondaryModifier : S_SIGNED .  (45)

	.  reduce 45


state 57
	OptionalSecondaryModifier : S_UNSIGNED .  (44)

	.  reduce 44


state 58
	TypeModifier : OptionalPrimaryModifier OptionalSecondaryModifier .  (41)

	.  reduce 41


state 59
	Block : '{' DeclarationOrStatementList . '}'  (31)

	'}'  shift 71
	.  error


state 60
	DeclarationOrStatementList : $$3 . DeclarationOrStatement $$4 DeclarationOrStatementList  (34)
	OptionalPrimaryModifier : .  (43)

	ID  shift 72
	S_RETURN  shift 73
	S_CONST  shift 43
	S_IF  shift 74
	S_WHILE  shift 75
	S_DO  shift 76
	'{'  shift 47
	S_BOOL  reduce 43
	S_INT  reduce 43
	S_FLOAT  reduce 43
	S_SIGNED  reduce 43
	S_UNSIGNED  reduce 43

	Block  goto 77
	DeclarationOrStatement  goto 78
	TypeModifier  goto 79
	OptionalPrimaryModifier  goto 46
	PrimitiveDeclaration  goto 80
	KeywordStatement  goto 81
	OtherDeclarationOrStatement  goto 82
	Selection  goto 83
	Iteration  goto 84
	Jump  goto 85


state 61
	Dimensions : '[' . NUM ']' Dimensions  (53)

	NUM  shift 86
	.  error


state 62
	Variable : OptionalPointer ID Dimensions . VariableInitilization  (57)
	VariableInitilization : .  (56)

	'='  shift 87
	';'  reduce 56
	')'  reduce 56
	','  reduce 56

	VariableInitilization  goto 88


state 63
	MoreParameters : ',' Parameter MoreParameters .  (29)

	.  reduce 29


state 64
	ClassDeclaration : S_CLASS ID OptionalSuperclass '{' $$1 MemberDeclarations '}' VariableList ';' .  (7)

	.  reduce 7


state 65
	MoreVariables : ',' . Variable MoreVariables  (58)
	OptionalPointer : .  (52)

	'*'  shift 35
	ID  reduce 52

	Variable  goto 89
	OptionalPointer  goto 37


state 66
	VariableList : Variable MoreVariables .  (8)

	.  reduce 8


state 67
	MemberDeclarations : FieldDeclarationList S_PUBLIC ':' MethodDeclarationList .  (12)

	.  reduce 12


state 68
	MethodDeclaration : OptionalStatic . FunctionDeclaration  (21)

	ID  shift 1
	S_VOID  shift 2
	S_BOOL  shift 3
	S_INT  shift 4
	S_FLOAT  shift 5
	.  error

	FunctionDeclaration  goto 90
	FunctionType  goto 12
	TypeName  goto 13
	PrimitiveType  goto 14


state 69
	MethodDeclarationList : MethodDeclaration . MethodDeclarationList  (19)
	OptionalStatic : .  (18)
	MethodDeclarationList : .  (20)

	S_STATIC  shift 29
	ID  reduce 18
	S_VOID  reduce 18
	S_BOOL  reduce 18
	S_INT  reduce 18
	S_FLOAT  reduce 18
	'}'  reduce 20

	MethodDeclarationList  goto 91
	OptionalStatic  goto 68
	MethodDeclaration  goto 69


state 70
	VariableDeclaration : TypeModifier $$5 TypeName . RestOfVariableDeclaration  (49)
	OptionalPointer : .  (52)

	'*'  shift 35
	ID  reduce 52

	Variable  goto 92
	RestOfVariableDeclaration  goto 93
	OptionalPointer  goto 37


state 71
	Block : '{' DeclarationOrStatementList '}' .  (31)

	.  reduce 31


state 72
	OtherDeclarationOrStatement : ID . RestOfDeclarationOrStatement  (130)
	MorePrimary : .  (106)

	'('  shift 94
	'['  shift 95
	'.'  shift 96
	';'  reduce 106
	'='  reduce 106

	MorePrimary  goto 97
	ArrayAccess  goto 98
	FieldAccess  goto 99
	FunctionCall  goto 100
	RestOfExpressionStatement  goto 101
	RestOfDeclarationOrStatement  goto 102


state 73
	Jump : S_RETURN . OptionalExpression ';'  (129)
	OptionalExpression : .  (64)

	ID  shift 103
	NUM  shift 104
	S_TRUE  shift 105
	S_FALSE  shift 106
	'('  shift 107
	'+'  shift 108
	'-'  shift 109
	'!'  shift 110
	';'  reduce 64

	Expression  goto 111
	Disjunction  goto 112
	OptionalExpression  goto 113
	Conjunction  goto 114
	Equality  goto 115
	Inequality  goto 116
	Sum  goto 117
	Product  goto 118
	Factor  goto 119
	Primary  goto 120


state 74
	Selection : S_IF . $$10 '(' Expression ')' Statement OptionalElse  (123)
	$$10 : .  (122)

	.  reduce 122

	$$10  goto 121


state 75
	Iteration : S_WHILE . '(' Expression ')' Statement  (127)

	'('  shift 122
	.  error


state 76
	Iteration : S_DO . Statement S_WHILE '(' Expression ')' ';'  (128)

	ID  shift 123
	S_RETURN  shift 73
	S_IF  shift 74
	S_WHILE  shift 75
	S_DO  shift 76
	'{'  shift 47
	.  error

	Block  goto 77
	KeywordStatement  goto 124
	Statement  goto 125
	ExpressionStatement  goto 126
	Selection  goto 83
	Iteration  goto 84
	Jump  goto 85


state 77
	KeywordStatement : Block .  (121)

	.  reduce 121


state 78
	DeclarationOrStatementList : $$3 DeclarationOrStatement . $$4 DeclarationOrStatementList  (34)
	$$4 : .  (33)

	.  reduce 33

	$$4  goto 127


state 79
	PrimitiveDeclaration : TypeModifier . PrimitiveType RestOfVariableDeclaration  (47)

	S_BOOL  shift 3
	S_INT  shift 4
	S_FLOAT  shift 5
	.  error

	PrimitiveType  goto 128


state 80
	DeclarationOrStatement : PrimitiveDeclaration .  (112)

	.  reduce 112


state 81
	DeclarationOrStatement : KeywordStatement .  (113)

	.  reduce 113


state 82
	DeclarationOrStatement : OtherDeclarationOrStatement .  (114)

	.  reduce 114


state 83
	KeywordStatement : Selection .  (118)

	.  reduce 118


state 84
	KeywordStatement : Iteration .  (119)

	.  reduce 119


state 85
	KeywordStatement : Jump .  (120)

	.  reduce 120


state 86
	Dimensions : '[' NUM . ']' Dimensions  (53)

	']'  shift 129
	.  error


state 87
	VariableInitilization : '=' . Expression  (55)

	ID  shift 103
	NUM  shift 104
	S_TRUE  shift 105
	S_FALSE  shift 106
	'('  shift 107
	'+'  shift 108
	'-'  shift 109
	'!'  shift 110
	.  error

	Expression  goto 130
	Disjunction  goto 112
	Conjunction  goto 114
	Equality  goto 115
	Inequality  goto 116
	Sum  goto 117
	Product  goto 118
	Factor  goto 119
	Primary  goto 120


state 88
	Variable : OptionalPointer ID Dimensions VariableInitilization .  (57)

	.  reduce 57


state 89
	MoreVariables : ',' Variable . MoreVariables  (58)
	MoreVariables : .  (59)

	','  shift 65
	';'  reduce 59

	MoreVariables  goto 131


state 90
	MethodDeclaration : OptionalStatic FunctionDeclaration .  (21)

	.  reduce 21


state 91
	MethodDeclarationList : MethodDeclaration MethodDeclarationList .  (19)

	.  reduce 19


state 92
	RestOfVariableDeclaration : Variable . MoreVariables ';'  (50)
	MoreVariables : .  (59)

	','  shift 65
	';'  reduce 59

	MoreVariables  goto 132


state 93
	VariableDeclaration : TypeModifier $$5 TypeName RestOfVariableDeclaration .  (49)

	.  reduce 49


state 94
	FunctionCall : '(' . OptionalArgumentList ')' MorePrimary  (109)
	OptionalArgumentList : .  (111)

	ID  shift 103
	NUM  shift 104
	S_TRUE  shift 105
	S_FALSE  shift 106
	'('  shift 107
	'+'  shift 108
	'-'  shift 109
	'!'  shift 110
	')'  reduce 111

	Expression  goto 133
	Disjunction  goto 112
	Conjunction  goto 114
	Equality  goto 115
	Inequality  goto 116
	Sum  goto 117
	Product  goto 118
	Factor  goto 119
	Primary  goto 120
	OptionalArgumentList  goto 134


state 95
	ArrayAccess : '[' . Expression ']' MorePrimary  (107)

	ID  shift 103
	NUM  shift 104
	S_TRUE  shift 105
	S_FALSE  shift 106
	'('  shift 107
	'+'  shift 108
	'-'  shift 109
	'!'  shift 110
	.  error

	Expression  goto 135
	Disjunction  goto 112
	Conjunction  goto 114
	Equality  goto 115
	Inequality  goto 116
	Sum  goto 117
	Product  goto 118
	Factor  goto 119
	Primary  goto 120


state 96
	FieldAccess : '.' . ID MorePrimary  (108)

	ID  shift 136
	.  error


state 97
	RestOfExpressionStatement : MorePrimary . OptionalAssignment ';'  (132)
	OptionalAssignment : .  (134)

	'='  shift 137
	';'  reduce 134

	OptionalAssignment  goto 138


state 98
	MorePrimary : ArrayAccess .  (103)

	.  reduce 103


state 99
	MorePrimary : FieldAccess .  (104)

	.  reduce 104


state 100
	MorePrimary : FunctionCall .  (105)

	.  reduce 105


state 101
	RestOfDeclarationOrStatement : RestOfExpressionStatement .  (131)
